--- a/kullanici.html
+++ b/kullanici.html
@@ -380,7 +380,7 @@
     </div>
     
     <div id="vipAnimationOverlay">
-        <img src="noel.gif" alt="VIP Effect">
+        <img src="img/noel.gif" alt="VIP Effect">
     </div>
   </div>
 
@@ -730,4 +730,5 @@
     detectAndSubscribe();
   </script>
 </body>
+
 </html>
